//Gen by 默认输入配置.xlsx\Sheet1
syntax = "proto3";
message DefInputConfig
{
    int32 ID = 1;
    string Keys = 2;
    string Cmd = 3;
}


message DefInputConfigList
{
    repeated DefInputConfig dataList = 1;
}
